feat: add GET JobTags, SkillTags API
